packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_incomplete_block_comment_diagnostics.snap
---
source: packages/wasm/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 19,
      "end": 20
    },
    "severity": "warning",
    "message": "unclosed block comment; inserted `*/`",
    "hints": []
  }
]
