packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_incomplete_call_diagnostics.snap
---
source: packages/wasm/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 16,
      "end": 17
    },
    "severity": "warning",
    "message": "unclosed grouping; inserted a closing `)`",
    "hints": []
  },
  {
    "range": {
      "start": 10,
      "end": 11
    },
    "severity": "error",
    "message": "unknown variable: f",
    "hints": []
  }
]
