packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_incomplete_code_block_diagnostics.snap
---
source: packages/wasm/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 21,
      "end": 22
    },
    "severity": "warning",
    "message": "unclosed code block; inserted a closing `}`",
    "hints": []
  }
]
