packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_incomplete_crlf_diagnostics.snap
---
source: packages/wasm/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 17,
      "end": 18
    },
    "severity": "warning",
    "message": "unclosed content block; inserted a closing `]`",
    "hints": []
  }
]
