packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_incomplete_deep_diagnostics.snap
---
source: packages/wasm/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 28,
      "end": 29
    },
    "severity": "warning",
    "message": "unclosed code block; inserted a closing `}`",
    "hints": []
  },
  {
    "range": {
      "start": 28,
      "end": 29
    },
    "severity": "warning",
    "message": "unclosed content block; inserted a closing `]`",
    "hints": []
  },
  {
    "range": {
      "start": 28,
      "end": 29
    },
    "severity": "warning",
    "message": "unclosed grouping; inserted a closing `)`",
    "hints": []
  },
  {
    "range": {
      "start": 10,
      "end": 11
    },
    "severity": "error",
    "message": "unknown variable: f",
    "hints": []
  }
]
